# motor_control

./: CMakeLists.txt  MOTOR_COMMUNICATION_API.md  README.md  TEST_GUIDE.md  hardware_interface_plugin.xml  package.xml
config/: motor_controller_config.yaml
include/: motor_control_cpp.h  motor_hardware_interface.h
launch/: motor_control_launch.py
scripts/: control_motor_via_topic.py
src/: main.cpp  motor_control_cpp.cpp  motor_hardware_interface.cpp  test_motor_hardware.cpp
urdf/: motor_control.urdf
